[package]
name = "socketaddr-benchmark"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "socketaddr-benchmark"
harness = false
